[gd_scene load_steps=12 format=3 uid="uid://xmnj0a50egcw"]

[ext_resource type="Script" path="res://ui_elements/menus/pause_menu.gd" id="1_eugk6"]
[ext_resource type="Texture2D" uid="uid://cmhk1ndmke4gq" path="res://ui_elements/graphics/yellow_corner.png" id="1_u6vjb"]
[ext_resource type="Texture2D" uid="uid://dd56qeo0vy6ap" path="res://ui_elements/graphics/symergylogo.png" id="2_8nadd"]
[ext_resource type="FontFile" uid="uid://xw5x0vmj0ffm" path="res://ui_elements/fonts/Oswald-VariableFont_wght.ttf" id="3_ccio2"]
[ext_resource type="PackedScene" uid="uid://5goygekty5xi" path="res://ui_elements/menus/settings_menu.tscn" id="5_pt4tb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0h3lr"]
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnk86"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evvjy"]
bg_color = Color(0.783085, 0.626883, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex66s"]
bg_color = Color(1, 0.8, 0.0156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00lbe"]
bg_color = Color(0.690964, 0.551932, 0, 1)

[sub_resource type="Theme" id="Theme_6urpy"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 24
Button/styles/focus = SubResource("StyleBoxEmpty_dnk86")
Button/styles/hover = SubResource("StyleBoxFlat_evvjy")
Button/styles/normal = SubResource("StyleBoxFlat_ex66s")
Button/styles/pressed = SubResource("StyleBoxFlat_00lbe")

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eugk6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0h3lr")

[node name="CornerTopLeft" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 148.0
texture = ExtResource("1_u6vjb")
expand_mode = 1

[node name="CornerBottomLeft" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -20.0
offset_right = 148.0
offset_bottom = 108.0
grow_vertical = 0
rotation = 4.71239
texture = ExtResource("1_u6vjb")
expand_mode = 1

[node name="CornerTopRight" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = 20.0
offset_right = 108.0
offset_bottom = 148.0
grow_horizontal = 0
rotation = 1.5708
texture = ExtResource("1_u6vjb")
expand_mode = 1

[node name="CornerBottomRight" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 108.0
offset_bottom = 108.0
grow_horizontal = 0
grow_vertical = 0
rotation = 3.14159
texture = ExtResource("1_u6vjb")
expand_mode = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.083
anchor_right = 0.656
anchor_bottom = 0.917
offset_left = -0.480042
offset_top = 0.359993
offset_right = 0.47998
offset_bottom = -0.360046
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Logo" type="TextureRect" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_8nadd")
expand_mode = 4

[node name="Unpause" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_6urpy")
theme_override_fonts/font = ExtResource("3_ccio2")
theme_override_font_sizes/font_size = 32
text = "UNPAUSE"

[node name="Settings" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_6urpy")
theme_override_fonts/font = ExtResource("3_ccio2")
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Credits" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_6urpy")
theme_override_fonts/font = ExtResource("3_ccio2")
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="MainMenu" type="Button" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_6urpy")
theme_override_fonts/font = ExtResource("3_ccio2")
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[node name="SettingsMenu" parent="." instance=ExtResource("5_pt4tb")]
visible = false
layout_mode = 1

[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
